old_tests/parser/invalid/022-keyword-as-identifier-declaration.man
def main()
    Float while
end
